overflow fix for mobile nav

--- a/grid-parts/styles/nav-handheld/styles-navigation.scss
+++ b/grid-parts/styles/nav-handheld/styles-navigation.scss
@@ -20,3 +20,7 @@ $itemsColor: var(--gridd-text-color);
 	overflow-y: scroll;
 	width: 100%;
 }
+
+#gridd-handheld-menu-wrapper {
+	overflow-y: scroll;
+}
